<resources>
    <string name="app_name">GDPT QuangTri</string>
    <string name="title_TroChoi">Trò Chơi</string>
    <string name="title_newsGDPT">Tin GĐPT</string>
    <string name="title_newsPS">Tin Phật sự</string>
    <string name="title_TuHoc">Tu học-Huấn luyện</string>
    <string name="title_Them">Thêm</string>
    <string name="open">navbar</string>
    <string name="close">navbar</string>

    <string name="app_facabook_id">233514577069385</string>
</resources>
